# 2015-Uni-Challenge

./: README.md
example-client-python/: CONTRIBUTORS  LICENSE  M2Mconnect-AC785S.py  M2Mconnect.py  gpsclient-2015.py  gpsclient-xively.py  gpsclient.py  gpsclienttest.py
example-server-haskell/: CONTRIBUTORS  LICENSE  README.md  example-server.cabal
example-server-haskell/src/: Db.hs  Main.hs  Site.hs
example-server-haskell/test/: TMain.hs  TSite.hs
example-server-python/: CONTRIBUTORS  LICENSE  M2M.db  README  m2mServer.py  schema.sql
example-server-python/static/css/: CSS_GSG.css  site.css  style.css
example-server-python/templates/: index.html  layout.html  map_python.html  map_unique.html  show_records.html
m2m-static-html/: index.html  map.html
m2m-static-html/assets/css/: site.css
m2m-static-html/assets/js/: load_m2m_map.js  load_m2m_map_jsonp.js
