Name:                example-server 
Version:             0.1
Synopsis:            Example Position Server 
License:             BSD3
License-file:        LICENSE
Author:              CJ East  
Maintainer:          CJ East <clinton.east@team.telstra.com>  
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable example-server  
  hs-source-dirs: src
  main-is:        Main.hs

  Build-depends:
    base >= 4 && < 5,
    aeson >= 0.6,
    bytestring >= 0.9.1 && < 0.11,
    heist >= 0.10 && < 0.13,
    lens >= 3.7.0.1 && < 3.10,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    snap > 0.11 && < 0.13,
    snap-core >= 0.9 && < 0.11,
    snap-extras >= 0.3 && <= 0.6,
    snap-server >= 0.9 && < 0.11,
    snap-loader-static >= 0.9 && < 0.11,
    snaplet-sqlite-simple >= 0.4 && < 1.0,
    sqlite-simple >= 0.4 && < 1.0,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.5,
    resource-pool-catchio >= 0.2 && < 0.3,
    xmlhtml >= 0.2,
    either  >= 3 && < 4,
    errors  >= 1.3 && < 1.5, 
    regex-compat, 
    containers 

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9 && < 0.11
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

Test-Suite test-example-server 
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test,src 
    main-is:             TMain.hs 
    build-depends:       base 
                       , snap > 0.11 && < 0.13
                       , test-framework       >= 0.8  
                       , test-framework-hunit >= 0.3.0  
                       , HUnit                >=1.2.5.2 && <1.3
                       , Cabal 
                       , transformers
    ghc-options:         -Wall 


